Change to asynchronous processing